Title change, some Rachelle stuff

--- a/Juliet.html
+++ b/Juliet.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta name="viewport"  content="width=device-width, initial-scale=1.0">
-    <title>Alphabet Superset: Our Journey</title>
+    <title>Juliet</title>
     <!-- connect css file-->
     <link rel="stylesheet" href="style.css"> 
     <!-- for general font-->
@@ -26,7 +26,7 @@
                     <li><a href="Juliet.html">JULIET</a></li>
                     <li><a href="Sean.html">SEAN</a></li>
                     <li><a href="Jarrod.html">JARROD</a></li>
-                    <li><a href="">RACHELLE</a></li>
+                    <li><a href="Rachelle.html">RACHELLE</a></li>
 
                 </ul>
             </div>
