--- a/Rachelle.html
+++ b/Rachelle.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta name="viewport"  content="width=device-width, initial-scale=1.0">
-    <title>Alphabet Superset: Our Journey</title>
+    <title>Rachelle</title>
     <!-- connect css file-->
     <link rel="stylesheet" href="style.css"> 
     <!-- for general font-->
@@ -35,7 +35,7 @@
         </nav>
 
     <!-- Content within Home page-->
-    <h1>Sean: Poetry</h1>
+    <h1>Rachelle: Filmm-aking</h1>
 
     </section>
 
