Adding stuff for Rachelle

--- a/Rachelle.html
+++ b/Rachelle.html
@@ -35,7 +35,7 @@
         </nav>
 
     <!-- Content within Home page-->
-    <h1>Rachelle: Filmm-aking</h1>
+    <h1>Rachelle: Film-making</h1>
 
     </section>
 
