--- a/index.html
+++ b/index.html
@@ -89,6 +89,13 @@
         <a href="Sean.html" class="hero-btn">CHECK OUT MY WORK</a>
     </section>
 
+    <section class="rachelle-words">
+        <h1>Rachelle</h1>
+        <p>
+        </p>
+        <a href="Rachelle.html" class="hero-btn">CHECK OUT MY WORK</a>
+    </section>
+
     <!---Footer-->
     <section class="footer">
         <h4>Where to find us?</h4>
