--- a/Jarrod.html
+++ b/Jarrod.html
@@ -27,6 +27,7 @@
                     <li><a href="Sean.html">SEAN</a></li>
                     <li><a href="Jarrod.html">JARROD</a></li>
                     <li><a href="Rachelle.html">RACHELLE</a></li>
+                    <li><a href="Dewald.html">Dewald</a></li>
 
                 </ul>
             </div>
