--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     <li><a href="Sean.html">SEAN</a></li>
                     <li><a href="Jarrod.html">JARROD</a></li>
                     <li><a href="Rachelle.html">RACHELLE</a></li>
+                    <li><a href="Dewald.html">Dewald</a></li>
 
                 </ul>
             </div>
@@ -94,6 +95,13 @@
         <p>
         </p>
         <a href="Rachelle.html" class="hero-btn">CHECK OUT MY WORK</a>
+    </section>
+
+    <section class="dewald-words">
+        <h1>Dewald</h1>
+        <p>
+        </p>
+        <a href="Dewald.html" class="hero-btn">CHECK OUT MY WORK</a>
     </section>
 
     <!---Footer-->
