--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="Sean.html">SEAN</a></li>
                     <li><a href="Jarrod.html">JARROD</a></li>
                     <li><a href="Rachelle.html">RACHELLE</a></li>
-                    <li><a href="Dewald.html">Dewald</a></li>
+                    <li><a href="Dewald.html">DEWALD</a></li>
 
                 </ul>
             </div>
