--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 
 
-    <!--Final words-->
+    <!--OUR WORDS: MAIN PAGE-->
     <section class="final-words">
         <h1>Juliet</h1>
         <p>Hi, I am Juliet! I have always been drawn to writing, particularly descriptive writing,
