Jarrod's galley + added dewald's caption
- added some photos to work
- added dewald's thing on index page
-

--- a/Jarrod.html
+++ b/Jarrod.html
@@ -37,13 +37,34 @@
 
     <!-- Content within Home page-->
     <h1>Jarrod: Digital Art</h1>
-
     </section>
 
+    <section class="artwork_digital_art">        
+        <div class="row">
+            <div class="photos-col">
+                <img src="images/image1.png">
+                <div class="layer">
+                    <h3>TITLE</h3>
+                </div>
+            </div>
+
+            <div class="photos-col">
+                <img src="images/image1.png">
+                <div class="layer">
+                    <h3>UH</h3>
+                </div>
+            </div>
+
+            <div class="photos-col">
+                <img src="images/image1.png">
+                <div class="layer">
+                    <h3>UR MUM</h3>
+                </div>
+            </div>
 
 
-
-
+        </div>
+    </section>
 
 
 <!-- ------------------------------------->
