--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
 
     <section class="dewald-words">
         <h1>Dewald</h1>
-        <p>
+        <p>Greetings! My name's Dewald, but you can call me "Dew". I dabble in digital art, and I'd love to improve my skills and efficiency with a stylus. During the Alphabet Superset, 
+            I'll be taking inspiration from my love of Dungeons & Dragons to create "Dew's Index of Magical Merchandise" (WIP), an old book describing numerous magical items, and how to use them.
         </p>
         <a href="Dewald.html" class="hero-btn">CHECK OUT MY WORK</a>
     </section>
