General update - art rep
- added gallery layout to everyone
- changed names to be more clear
- changed my background - will see if I like it :)
- added Sean and Rachelle's blurb

--- a/Juliet.html
+++ b/Juliet.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"">
 </head>
 <body>
-    <section class="sub-header">
+    <section class="sub-header-juliet">
         <nav>
             <a href="index.html"><img src="images/logo.png"></a>
             <div class="nav-links" id="navLinks">
@@ -38,6 +38,33 @@
     <!-- Content within Home page-->
     <h1>Juliet: Descriptive Writing</h1>
 
+    </section>
+
+    <section class="artwork_digital_art">        
+        <div class="row">
+            <div class="photos-col">
+                <img src="images/Secrets Inbound.png">
+                <div class="layer">
+                    <h3>TITLE</h3>
+                </div>
+            </div>
+
+            <div class="photos-col">
+                <img src="images/Work in Progress.png">
+                <div class="layer">
+                    <h3>UH</h3>
+                </div>
+            </div>
+
+            <div class="photos-col">
+                <img src="images/Be Patient.png">
+                <div class="layer">
+                    <h3>UR MUM</h3>
+                </div>
+            </div>
+
+
+        </div>
     </section>
 
 
