--- a/index.html
+++ b/index.html
@@ -85,14 +85,19 @@
 
     <section class="sean-words">
         <h1>Sean</h1>
-        <p>
+        <p>Hello! I'm Sean, and I have recently taken a liking to writing a little poetry! My hope for this project is to weave together my poems with some 
+            digital sketching, and try to explore a new medium for my creativity that I haven't really attempted before. The poems I'm hoping to write here are 
+            intended as an exploration of animism - 
+            the practice of seeing the human in the more-than-human world. I hope they're fun to read and prod you in the feely bits occasionally!
         </p>
         <a href="Sean.html" class="hero-btn">CHECK OUT MY WORK</a>
     </section>
 
     <section class="rachelle-words">
         <h1>Rachelle</h1>
-        <p>
+        <p>Well hello there! I’m Rachelle and I really like performing and music (most of my degree at the moment). I love songwriting/composing but struggle with being overly 
+            critical and never letting 
+            myself finish any pieces. Hopefully doing a whole lot of it over the coming weeks will help me change that :)
         </p>
         <a href="Rachelle.html" class="hero-btn">CHECK OUT MY WORK</a>
     </section>
