--- a/Jarrod.html
+++ b/Jarrod.html
@@ -42,21 +42,21 @@
     <section class="artwork_digital_art">        
         <div class="row">
             <div class="photos-col">
-                <img src="images/image1.png">
+                <img src="images/Secrets Inbound.png">
                 <div class="layer">
                     <h3>TITLE</h3>
                 </div>
             </div>
 
             <div class="photos-col">
-                <img src="images/image1.png">
+                <img src="images/Work in Progress.png">
                 <div class="layer">
                     <h3>UH</h3>
                 </div>
             </div>
 
             <div class="photos-col">
-                <img src="images/image1.png">
+                <img src="images/Be Patient.png">
                 <div class="layer">
                     <h3>UR MUM</h3>
                 </div>
@@ -65,6 +65,8 @@
 
         </div>
     </section>
+
+    
 
 
 <!-- ------------------------------------->
