--- a/Rachelle.html
+++ b/Rachelle.html
@@ -36,8 +36,35 @@
         </nav>
 
     <!-- Content within Home page-->
-    <h1>Rachelle: Film-making</h1>
+    <h1>Rachelle: Composition</h1>
 
+    </section>
+
+    <section class="artwork_digital_art">        
+        <div class="row">
+            <div class="photos-col">
+                <img src="images/Secrets Inbound.png">
+                <div class="layer">
+                    <h3>TITLE</h3>
+                </div>
+            </div>
+
+            <div class="photos-col">
+                <img src="images/Work in Progress.png">
+                <div class="layer">
+                    <h3>UH</h3>
+                </div>
+            </div>
+
+            <div class="photos-col">
+                <img src="images/Be Patient.png">
+                <div class="layer">
+                    <h3>UR MUM</h3>
+                </div>
+            </div>
+
+
+        </div>
     </section>
 
 
