--- a/Sean.html
+++ b/Sean.html
@@ -40,6 +40,33 @@
 
     </section>
 
+    <section class="artwork_digital_art">        
+        <div class="row">
+            <div class="photos-col">
+                <img src="images/Secrets Inbound.png">
+                <div class="layer">
+                    <h3>TITLE</h3>
+                </div>
+            </div>
+
+            <div class="photos-col">
+                <img src="images/Work in Progress.png">
+                <div class="layer">
+                    <h3>UH</h3>
+                </div>
+            </div>
+
+            <div class="photos-col">
+                <img src="images/Be Patient.png">
+                <div class="layer">
+                    <h3>UR MUM</h3>
+                </div>
+            </div>
+
+
+        </div>
+    </section>
+
 
 
 
