--- a/Rachelle.html
+++ b/Rachelle.html
@@ -24,8 +24,8 @@
                     <!-- clickable link-->
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="Juliet.html">JULIET</a></li>
-                    <li><a href="Sean.html">SEAN</a></li>
                     <li><a href="Jarrod.html">JARROD</a></li>
+                    <li><a href="Sean.html">SEAN</a></li>
                     <li><a href="Rachelle.html">RACHELLE</a></li>
                     <li><a href="Dewald.html">DEWALD</a></li>
 
@@ -36,7 +36,7 @@
         </nav>
 
     <!-- Content within Home page-->
-    <h1>Rachelle: Composition</h1>
+    <h1>Rachelle: Lyricism</h1>
 
     </section>
 
