Added type of expression of contents
- Rachelle and Juliet

--- a/Rachelle.html
+++ b/Rachelle.html
@@ -40,31 +40,27 @@
 
     </section>
 
-    <section class="artwork_digital_art">        
+    <section class="word_btn_rep">
         <div class="row">
-            <div class="photos-col">
-                <img src="images/Secrets Inbound.png">
-                <div class="layer">
-                    <h3>TITLE</h3>
-                </div>
+            <div class="word_btn_rep-col">
+                <h1>Animal</h1>
+                <p>Here you can do a description of the piece, unless you don't want to... Just writing here to you can see how it looks!</p>
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="hero-btn">Watch</a>
             </div>
-
-            <div class="photos-col">
-                <img src="images/Work in Progress.png">
-                <div class="layer">
-                    <h3>UH</h3>
-                </div>
+            <div class="word_btn_rep-col">
+                <h1>Braids</h1>
+                <p>Here you can do a description of the piece, unless you don't want to... Just writing here to you can see how it looks!</p>
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="hero-btn">Watch</a>
             </div>
-
-            <div class="photos-col">
-                <img src="images/Be Patient.png">
-                <div class="layer">
-                    <h3>UR MUM</h3>
-                </div>
+            <div class="word_btn_rep-col">
+                <h1>Custard</h1>
+                <p>Here you can do a description of the piece, unless you don't want to... Just writing here to you can see how it looks!</p>
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="hero-btn">Watch</a>
             </div>
-
 
         </div>
+
+    </section>
     </section>
 
 
