--- a/Juliet.html
+++ b/Juliet.html
@@ -40,31 +40,27 @@
 
     </section>
 
-    <section class="artwork_digital_art">        
+    <section class="word_btn_rep">
         <div class="row">
-            <div class="photos-col">
-                <img src="images/Secrets Inbound.png">
-                <div class="layer">
-                    <h3>TITLE</h3>
-                </div>
+            <div class="word_btn_rep-col">
+                <h1>Animal</h1>
+                <p>Death</p>
+                <a href="https://genius.com/Rick-astley-never-gonna-give-you-up-lyrics" class="hero-btn">Read</a>
             </div>
-
-            <div class="photos-col">
-                <img src="images/Work in Progress.png">
-                <div class="layer">
-                    <h3>UH</h3>
-                </div>
+            <div class="word_btn_rep-col">
+                <h1>Braids</h1>
+                <p>Life</p>
+                <a href="https://genius.com/Rick-astley-never-gonna-give-you-up-lyrics" class="hero-btn">Read</a>
             </div>
-
-            <div class="photos-col">
-                <img src="images/Be Patient.png">
-                <div class="layer">
-                    <h3>UR MUM</h3>
-                </div>
+            <div class="word_btn_rep-col">
+                <h1>Custard</h1>
+                <p>New</p>
+                <a href="https://genius.com/Rick-astley-never-gonna-give-you-up-lyrics" class="hero-btn">Read</a>
             </div>
-
 
         </div>
+
+    </section>
     </section>
 
 
