Showcasing how things look
- added some stuff
- made more static thingy

--- a/Jarrod.html
+++ b/Jarrod.html
@@ -43,23 +43,44 @@
         <div class="row">
             <div class="photos-col">
                 <img src="images/Secrets Inbound.png">
-                <div class="layer">
-                    <h3>TITLE</h3>
-                </div>
+                <h2>Title: Animal</h2>
+                <h2>Date: 4 Sept 2023</h2>
             </div>
 
             <div class="photos-col">
                 <img src="images/Work in Progress.png">
-                <div class="layer">
-                    <h3>UH</h3>
-                </div>
+                <h2>Title: Braids</h2>
+                <h2>Date: 10 Sept 2023</h2>
             </div>
 
             <div class="photos-col">
                 <img src="images/Be Patient.png">
-                <div class="layer">
-                    <h3>UR MUM</h3>
-                </div>
+                <h2>Title: Custard</h2>
+                <h2>Date: 18 Sept 2023</h2>
+            </div>
+
+
+        </div>
+    </section>
+
+    <section class="artwork_digital_art">        
+        <div class="row">
+            <div class="photos-col">
+                <img src="images/Secrets Inbound.png">
+                <h2>Title: Dingo</h2>
+                <h2>Date: 25 Sept 2023</h2>
+            </div>
+
+            <div class="photos-col">
+                <img src="images/Work in Progress.png">
+                <h2>Title: Elf</h2>
+                <h2>Date: 2 Oct 2023</h2>
+            </div>
+
+            <div class="photos-col">
+                <img src="images/Be Patient.png">
+                <h2>Title: Flame</h2>
+                <h2>Date: 9 Oct 2023</h2>
             </div>
 
 
