--- a/Sean.html
+++ b/Sean.html
@@ -45,14 +45,41 @@
             <div class="photos-col">
                 <img src="images/Secrets Inbound.png">
                 <div class="layer">
-                    <h3>TITLE</h3>
+                    <h3>ANIMAL</h3>
                 </div>
             </div>
 
             <div class="photos-col">
                 <img src="images/Work in Progress.png">
                 <div class="layer">
-                    <h3>UH</h3>
+                    <h3>BRAIDS</h3>
+                </div>
+            </div>
+
+            <div class="photos-col">
+                <img src="images/Be Patient.png">
+                <div class="layer">
+                    <h3>CUSTARD</h3>
+                </div>
+            </div>
+
+
+        </div>
+    </section>
+
+    <section class="artwork_digital_art">        
+        <div class="row">
+            <div class="photos-col">
+                <img src="images/Secrets Inbound.png">
+                <div class="layer">
+                    <h3>DINGO</h3>
+                </div>
+            </div>
+
+            <div class="photos-col">
+                <img src="images/Work in Progress.png">
+                <div class="layer">
+                    <h3>ELF</h3>
                 </div>
             </div>
 
