Expressing more options

--- a/Jarrod.html
+++ b/Jarrod.html
@@ -67,20 +67,20 @@
         <div class="row">
             <div class="photos-col">
                 <img src="images/Secrets Inbound.png">
-                <h2>Title: Dingo</h2>
-                <h2>Date: 25 Sept 2023</h2>
+                <h2>Dingo</h2>
+                <h2>25 Sept 2023</h2>
             </div>
 
             <div class="photos-col">
                 <img src="images/Work in Progress.png">
-                <h2>Title: Elf</h2>
-                <h2>Date: 2 Oct 2023</h2>
+                <h2>Elf</h2>
+                <h2>2 Oct 2023</h2>
             </div>
 
             <div class="photos-col">
                 <img src="images/Be Patient.png">
-                <h2>Title: Flame</h2>
-                <h2>Date: 9 Oct 2023</h2>
+                <h2>Flame</h2>
+                <h2>9 Oct 2023</h2>
             </div>
 
 
