Adding my new blurb

--- a/index.html
+++ b/index.html
@@ -64,9 +64,11 @@
     <!--OUR WORDS: MAIN PAGE-->
     <section class="final-words">
         <h1>Juliet</h1>
-        <p>Hi, I am Juliet! I have always been drawn to writing, particularly descriptive writing,
-            but have never got to actually trying it out. I am not sure where this will go, but I shall 
-            give it my best shot!
+        <p>Hi, I am Juliet. Writing has been something that has been lurking over my shoulder for quite a while now,
+            and I think now is the time for me to try it out!
+            Perhaps it is specific moments in one's life that defines them - this is what I am going to explore. 
+            My goal is to tell a story through descriptive peices of moments in a person's life. She will be 
+            fantastical and beautiful, ugly and cruel, but hopefully once all is said and done - she will be whole. 
         </p>
         <a href="Juliet.html" class="hero-btn">CHECK OUT MY WORK</a>
     </section>
