Put in Overviews
- made overview
- put in Juliet's overview
- changed dewald's to cap in his menu

--- a/Juliet.html
+++ b/Juliet.html
@@ -61,6 +61,18 @@
         </div>
 
     </section>
+    
+
+    <!--- OVER VIEW -->
+
+    <section class="overview">
+        <h1>OVERVIEW</h1>
+        <h2>THEME: Moments in the life of Her.</h2>
+        <h3>MEDIUM: Descriptive Writing.</h3>
+        <h3>STYLE: Short, descriptive peices of moments in her life.</h3>
+        <h3>OUTPUT: less than 500 word writing piece.</h3>
+        <h3>POSTING: Sunday at 14:00 on the website.</h3>
+
     </section>
 
 
