adding Jarrod's Overview

--- a/Jarrod.html
+++ b/Jarrod.html
@@ -90,11 +90,11 @@
     
     <section class="overview">
         <h1>OVERVIEW</h1>
-        <h2>THEME: .</h2>
-        <h3>MEDIUM: </h3>
-        <h3>STYLE: </h3>
-        <h3>OUTPUT: </h3>
-        <h3>POSTING:</h3>
+        <h2>THEME: Bio-Alchemical Transmutation.</h2>
+        <h3>MEDIUM: Digital Oil Paint.</h3>
+        <h3>STYLE: Dark, simple, symbolic.</h3>
+        <h3>OUTPUT: A4 resolution.</h3>
+        <h3>POSTING: 11:00 Monday on Website and Instagram @jarrodvs_i_guess.</h3>
 
     </section>
 
