Added book. Little spelling errors
- added html book.html example
- piece instead of peice
- theme instead of them
- maybe some other stuff

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <section class="jarrod-words">
         <h1>JARROD</h1>
         <p>Hi, I'm Jarrod van Schalkwyk, and I am working on honing my digital art skills, specifically 
-            in the style of oil painting. For the Alphabet Superset I will be focusing on the them 
+            in the style of oil painting. For the Alphabet Superset I will be focusing on the theme 
             of Mutation, specifically in the sense of human and animal combinations 
             both in a scientific and fantasy sense. This theme is important to me 
             as I am heavily influenced by fantastical creatures, but also by the 
