--- a/Juliet.html
+++ b/Juliet.html
@@ -45,17 +45,17 @@
             <div class="word_btn_rep-col">
                 <h1>Animal</h1>
                 <p>Death</p>
-                <a href="https://genius.com/Rick-astley-never-gonna-give-you-up-lyrics" class="hero-btn">Read</a>
+                <a href="book.html" target="_blank" class="hero-btn">Read</a>
             </div>
             <div class="word_btn_rep-col">
                 <h1>Braids</h1>
                 <p>Life</p>
-                <a href="https://genius.com/Rick-astley-never-gonna-give-you-up-lyrics" class="hero-btn">Read</a>
+                <a href="book.html" target="_blank" class="hero-btn">Read</a>
             </div>
             <div class="word_btn_rep-col">
                 <h1>Custard</h1>
                 <p>New</p>
-                <a href="https://genius.com/Rick-astley-never-gonna-give-you-up-lyrics" class="hero-btn">Read</a>
+                <a href="book.html" target="_blank" class="hero-btn">Read</a>
             </div>
 
         </div>
@@ -69,7 +69,7 @@
         <h1>OVERVIEW</h1>
         <h2>THEME: Moments in the life of Her.</h2>
         <h3>MEDIUM: Descriptive Writing.</h3>
-        <h3>STYLE: Short, descriptive peices of moments in her life.</h3>
+        <h3>STYLE: Short, descriptive pieces of moments in her life.</h3>
         <h3>OUTPUT: less than 500 word writing piece.</h3>
         <h3>POSTING: Sunday at 14:00 on the website.</h3>
 
