--- a/Rachelle.html
+++ b/Rachelle.html
@@ -45,17 +45,17 @@
             <div class="word_btn_rep-col">
                 <h1>Animal</h1>
                 <p>Here you can do a description of the piece, unless you don't want to... Just writing here to you can see how it looks!</p>
-                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="hero-btn">Watch</a>
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" class="hero-btn">Watch</a>
             </div>
             <div class="word_btn_rep-col">
                 <h1>Braids</h1>
                 <p>Here you can do a description of the piece, unless you don't want to... Just writing here to you can see how it looks!</p>
-                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="hero-btn">Watch</a>
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" class="hero-btn">Watch</a>
             </div>
             <div class="word_btn_rep-col">
                 <h1>Custard</h1>
                 <p>Here you can do a description of the piece, unless you don't want to... Just writing here to you can see how it looks!</p>
-                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="hero-btn">Watch</a>
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" class="hero-btn">Watch</a>
             </div>
 
         </div>
