--- a/Sean.html
+++ b/Sean.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;600;700&display=swap" rel="stylesheet">
     <!--for menu in small fonts. Note: I used the 4 version because it actually works...-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <section class="sub-header-sean">
@@ -96,11 +96,11 @@
 
     <section class="overview">
         <h1>OVERVIEW</h1>
-        <h2>THEME: .</h2>
-        <h3>MEDIUM: </h3>
-        <h3>STYLE: </h3>
-        <h3>OUTPUT: </h3>
-        <h3>POSTING:</h3>
+        <h2>THEME: Animist Poetry, Coincidence of the Micro-/Macrocosm.</h2>
+        <h3>MEDIUM: Free-verse poetry with digital illustration.</h3>
+        <h3>STYLE: Sketch, Motif.</h3>
+        <h3>OUTPUT: 2-10 1080px tiles.</h3>
+        <h3>POSTING: Wednesday evenings at 8pm PDT to the website (possible Instagram release at a later date).</h3>
 
     </section>
 
