Creating a space that can be used
- still have rick rolling though xD
- deleted some images that aren't used

--- a/Dewald.html
+++ b/Dewald.html
@@ -45,21 +45,21 @@
             <div class="photos-col">
                 <img src="images/Secrets Inbound.png">
                 <div class="layer">
-                    <h3>TITLE</h3>
+                    <h3>A---<br>4 Sept 2023</h3>
                 </div>
             </div>
 
             <div class="photos-col">
                 <img src="images/Work in Progress.png">
                 <div class="layer">
-                    <h3>UH</h3>
+                    <h3>B---<br>11 Sept 2023</h3>
                 </div>
             </div>
 
             <div class="photos-col">
                 <img src="images/Be Patient.png">
                 <div class="layer">
-                    <h3>UR MUM</h3>
+                    <h3>C---<br>18 Sept 2023</h3>
                 </div>
             </div>
 
