--- a/Rachelle.html
+++ b/Rachelle.html
@@ -43,18 +43,18 @@
     <section class="word_btn_rep">
         <div class="row">
             <div class="word_btn_rep-col">
-                <h1>Animal</h1>
-                <p>Here you can do a description of the piece, unless you don't want to... Just writing here to you can see how it looks!</p>
+                <h1>A---</h1>
+                <p>Coming in the week of 4 September 2023!</p>
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" class="hero-btn">Watch</a>
             </div>
             <div class="word_btn_rep-col">
-                <h1>Braids</h1>
-                <p>Here you can do a description of the piece, unless you don't want to... Just writing here to you can see how it looks!</p>
+                <h1>B---</h1>
+                <p>Coming in the week of 11 September 2023!</p>
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" class="hero-btn">Watch</a>
             </div>
             <div class="word_btn_rep-col">
-                <h1>Custard</h1>
-                <p>Here you can do a description of the piece, unless you don't want to... Just writing here to you can see how it looks!</p>
+                <h1>C---</h1>
+                <p>Coming in the week of 18 September 2023!</p>
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" class="hero-btn">Watch</a>
             </div>
 
