--- a/Jarrod.html
+++ b/Jarrod.html
@@ -38,55 +38,31 @@
     <!-- Content within Home page-->
     <h1>Jarrod: Digital Art</h1>
     </section>
-
+    <!--COPY FROM HERE-->
     <section class="artwork_digital_art">        
         <div class="row">
             <div class="photos-col">
                 <img src="images/Secrets Inbound.png">
-                <h2>Title: Animal</h2>
-                <h2>Date: 4 Sept 2023</h2>
+                <h2>Title: A---</h2>
+                <h2>Date: 4 September 2023</h2>
             </div>
 
             <div class="photos-col">
                 <img src="images/Work in Progress.png">
-                <h2>Title: Braids</h2>
-                <h2>Date: 10 Sept 2023</h2>
+                <h2>Title: B---</h2>
+                <h2>Date: 11 September 2023</h2>
             </div>
 
             <div class="photos-col">
                 <img src="images/Be Patient.png">
-                <h2>Title: Custard</h2>
-                <h2>Date: 18 Sept 2023</h2>
+                <h2>Title: C---</h2>
+                <h2>Date: 18 September 2023</h2>
             </div>
 
 
         </div>
     </section>
-
-    <section class="artwork_digital_art">        
-        <div class="row">
-            <div class="photos-col">
-                <img src="images/Secrets Inbound.png">
-                <h2>Dingo</h2>
-                <h2>25 Sept 2023</h2>
-            </div>
-
-            <div class="photos-col">
-                <img src="images/Work in Progress.png">
-                <h2>Elf</h2>
-                <h2>2 Oct 2023</h2>
-            </div>
-
-            <div class="photos-col">
-                <img src="images/Be Patient.png">
-                <h2>Flame</h2>
-                <h2>9 Oct 2023</h2>
-            </div>
-
-
-        </div>
-    </section>
-
+    <!--COPY UNTIL HERE-->
     
     <section class="overview">
         <h1>OVERVIEW</h1>
