--- a/Juliet.html
+++ b/Juliet.html
@@ -43,18 +43,18 @@
     <section class="word_btn_rep">
         <div class="row">
             <div class="word_btn_rep-col">
-                <h1>Animal</h1>
-                <p>Death</p>
+                <h1>A---</h1>
+                <p>Coming in the week of 4 September 2023! </p>
                 <a href="book.html" target="_blank" class="hero-btn">Read</a>
             </div>
             <div class="word_btn_rep-col">
-                <h1>Braids</h1>
-                <p>Life</p>
+                <h1>B---</h1>
+                <p>Coming in the week of 11 September 2023!</p>
                 <a href="book.html" target="_blank" class="hero-btn">Read</a>
             </div>
             <div class="word_btn_rep-col">
-                <h1>Custard</h1>
-                <p>New</p>
+                <h1>C---</h1>
+                <p>Coming in the week of 18 September 2023!</p>
                 <a href="book.html" target="_blank" class="hero-btn">Read</a>
             </div>
 
@@ -67,7 +67,7 @@
 
     <section class="overview">
         <h1>OVERVIEW</h1>
-        <h2>THEME: Moments in the life of Her.</h2>
+        <h2>THEME: Moments in the life of her.</h2>
         <h3>MEDIUM: Descriptive Writing.</h3>
         <h3>STYLE: Short, descriptive pieces of moments in her life.</h3>
         <h3>OUTPUT: less than 500 word writing piece.</h3>
