Added overview for Rachelle and Dewald

--- a/Dewald.html
+++ b/Dewald.html
@@ -69,11 +69,11 @@
 
     <section class="overview">
         <h1>OVERVIEW</h1>
-        <h2>THEME: .</h2>
-        <h3>MEDIUM: </h3>
-        <h3>STYLE: </h3>
-        <h3>OUTPUT: </h3>
-        <h3>POSTING:</h3>
+        <h2>THEME: D&D Magic Items.</h2>
+        <h3>MEDIUM: Digital Art.</h3>
+        <h3>STYLE: Mysterious old book.</h3>
+        <h3>OUTPUT: A5 page (600 ppi).</h3>
+        <h3>POSTING: Sundays 10:00 - here and on my Discord server.</h3>
 
     </section>
 
