--- a/Rachelle.html
+++ b/Rachelle.html
@@ -36,7 +36,7 @@
         </nav>
 
     <!-- Content within Home page-->
-    <h1>Rachelle: Lyricism</h1>
+    <h1>Rachelle: Songwriting</h1>
 
     </section>
 
@@ -65,11 +65,11 @@
 
     <section class="overview">
         <h1>OVERVIEW</h1>
-        <h2>THEME: .</h2>
-        <h3>MEDIUM: </h3>
-        <h3>STYLE: </h3>
-        <h3>OUTPUT: </h3>
-        <h3>POSTING:</h3>
+        <h2>THEME: Extended metaphor.</h2>
+        <h3>MEDIUM: Songwriting.</h3>
+        <h3>STYLE: A melody with lyrics and a simple accompaniment, sung CCM style.</h3>
+        <h3>OUTPUT: 30 second - 1 minute song bits recorded in GarageBand.</h3>
+        <h3>POSTING: Wednesday afternoons on the website.</h3>
 
     </section>
 
