Changed up files and added Dewald's coming soon
- coming soon added (Dewald)
- created designated art folders and moved the "in progress" photos to there.

--- a/Dewald.html
+++ b/Dewald.html
@@ -43,21 +43,21 @@
     <section class="artwork_digital_art">        
         <div class="row">
             <div class="photos-col">
-                <img src="images/Secrets Inbound.png">
+                <img src="art_dewald/Coming_Soon_Dewald.png">
                 <div class="layer">
                     <h3>A---<br>4 Sept 2023</h3>
                 </div>
             </div>
 
             <div class="photos-col">
-                <img src="images/Work in Progress.png">
+                <img src="art_dewald/Coming_Soon_Dewald.png">
                 <div class="layer">
                     <h3>B---<br>11 Sept 2023</h3>
                 </div>
             </div>
 
             <div class="photos-col">
-                <img src="images/Be Patient.png">
+                <img src="art_dewald/Coming_Soon_Dewald.png">
                 <div class="layer">
                     <h3>C---<br>18 Sept 2023</h3>
                 </div>
