--- a/Jarrod.html
+++ b/Jarrod.html
@@ -42,19 +42,19 @@
     <section class="artwork_digital_art">        
         <div class="row">
             <div class="photos-col">
-                <img src="images/Secrets Inbound.png">
+                <img src="art_jarrod/Secrets Inbound.png">
                 <h2>Title: A---</h2>
                 <h2>Date: 4 September 2023</h2>
             </div>
 
             <div class="photos-col">
-                <img src="images/Work in Progress.png">
+                <img src="art_jarrod/Work in Progress.png">
                 <h2>Title: B---</h2>
                 <h2>Date: 11 September 2023</h2>
             </div>
 
             <div class="photos-col">
-                <img src="images/Be Patient.png">
+                <img src="art_jarrod/Be Patient.png">
                 <h2>Title: C---</h2>
                 <h2>Date: 18 September 2023</h2>
             </div>
