Rachelle update + v1 of alabaster

--- a/Rachelle.html
+++ b/Rachelle.html
@@ -43,19 +43,21 @@
     <section class="word_btn_rep">
         <div class="row">
             <div class="word_btn_rep-col">
-                <h1>A---</h1>
-                <p>Coming in the week of 4 September 2023!</p>
-                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" class="hero-btn">Watch</a>
+                <h1>Anchor</h1>
+                <p>“Never has there been a lesser desire to roam”
+                    <br>
+                    6 September 2023</p>
+                <audio src="art_rachelle/Anchor.mp3" controls></audio>
             </div>
             <div class="word_btn_rep-col">
                 <h1>B---</h1>
                 <p>Coming in the week of 11 September 2023!</p>
-                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" class="hero-btn">Watch</a>
+                <audio src="./test.mp3" controls></audio>
             </div>
             <div class="word_btn_rep-col">
                 <h1>C---</h1>
                 <p>Coming in the week of 18 September 2023!</p>
-                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" class="hero-btn">Watch</a>
+                <audio src="./test.mp3" controls></audio>
             </div>
 
         </div>
