fixed Rachelle and added Copywrite
- copywrite stuff
- fixed rachelle's inverted commas

--- a/Dewald.html
+++ b/Dewald.html
@@ -80,8 +80,12 @@
 <!-- ------------------------------------->
     <!---Footer-->
     <section class="footer">
-        <h4>Where to find us?</h4>
-        <p> bluh bluh bluh bluh</p>
+        <h4>Copywrite</h4>
+        <p> 
+            © 2023&2024 Dewald Smit. All artwork found on this page is protected under international copyright laws and agreements. 
+            <br>
+            No part of this artwork may be reproduced, stored in a retrieval system, or transmitted in any form or by any means, electronic, mechanical, photocopying, recording, or otherwise, without the prior written permission of the artist.
+        </p>
 
         <div class="icons">
             <i class="fa fa-facebook"></i>
