--- a/Rachelle.html
+++ b/Rachelle.html
@@ -44,7 +44,7 @@
         <div class="row">
             <div class="word_btn_rep-col">
                 <h1>Anchor</h1>
-                <p>“Never has there been a lesser desire to roam”
+                <p>"Never has there been a lesser desire to roam"
                     <br>
                     6 September 2023</p>
                 <audio src="art_rachelle/Anchor.mp3" controls></audio>
@@ -84,8 +84,10 @@
 <!-- ------------------------------------->
     <!---Footer-->
     <section class="footer">
-        <h4>Where to find us?</h4>
-        <p> bluh bluh bluh bluh</p>
+        <h4>Notice</h4>
+        <p> © 2023&2024 Rachelle Weiss. All artwork found on this page is protected under international copyright laws and agreements. 
+            <br>
+            No part of this artwork may be reproduced, stored in a retrieval system, or transmitted in any form or by any means, electronic, mechanical, photocopying, recording, or otherwise, without the prior written permission of the artist.</p>
 
         <div class="icons">
             <i class="fa fa-facebook"></i>
