not swear words
----
to
...
(thanks Reegan)

--- a/Sean.html
+++ b/Sean.html
@@ -52,7 +52,7 @@
             </div>
             
         </div>
-        <h1>Title: A---</h1>
+        <h1>Title: A...</h1>
         <h1>Date: 4 September 2023</h1>
         <!--COPY TO HERE-->
 		
