--- a/Dewald.html
+++ b/Dewald.html
@@ -45,21 +45,21 @@
             <div class="photos-col">
                 <img src="art_dewald/Coming_Soon_Dewald.png">
                 <div class="layer">
-                    <h3>A---<br>4 Sept 2023</h3>
+                    <h3>A...<br>4 Sept 2023</h3>
                 </div>
             </div>
 
             <div class="photos-col">
                 <img src="art_dewald/Coming_Soon_Dewald.png">
                 <div class="layer">
-                    <h3>B---<br>11 Sept 2023</h3>
+                    <h3>B...<br>11 Sept 2023</h3>
                 </div>
             </div>
 
             <div class="photos-col">
                 <img src="art_dewald/Coming_Soon_Dewald.png">
                 <div class="layer">
-                    <h3>C---<br>18 Sept 2023</h3>
+                    <h3>C...<br>18 Sept 2023</h3>
                 </div>
             </div>
 
