--- a/Jarrod.html
+++ b/Jarrod.html
@@ -43,19 +43,19 @@
         <div class="row">
             <div class="photos-col">
                 <img src="art_jarrod/Secrets Inbound.png">
-                <h2>Title: A---</h2>
+                <h2>Title: A...</h2>
                 <h2>Date: 4 September 2023</h2>
             </div>
 
             <div class="photos-col">
                 <img src="art_jarrod/Work in Progress.png">
-                <h2>Title: B---</h2>
+                <h2>Title: B...</h2>
                 <h2>Date: 11 September 2023</h2>
             </div>
 
             <div class="photos-col">
                 <img src="art_jarrod/Be Patient.png">
-                <h2>Title: C---</h2>
+                <h2>Title: C...</h2>
                 <h2>Date: 18 September 2023</h2>
             </div>
 
@@ -80,7 +80,7 @@
     <section class="footer">
         <h4>Copywrite</h4>
         <p> 
-            © 2023/2024 Jarrod van Schalkwyk. All artwork found on this page is protected under international copyright laws and agreements. 
+            © 2023&2024 Jarrod van Schalkwyk. All artwork found on this page is protected under international copyright laws and agreements. 
             <br>
             No part of this artwork may be reproduced, stored in a retrieval system, or transmitted in any form or by any means, electronic, mechanical, photocopying, recording, or otherwise, without the prior written permission of the artist.
 
