--- a/Sean.html
+++ b/Sean.html
@@ -45,15 +45,11 @@
         <!--COPY FROM HERE-->
         <div class="row">
             <div class="two_image">
-                <img src="https://images.unsplash.com/photo-1511765224389-37f0e77cf0eb?w=500&h=500&fit=crop" class="gallery-image" alt="">
-            </div>
-            <div class="two_image">
-                <img src="https://assets.teenvogue.com/photos/57f66b2026a4b75134da3fe3/master/w_320%2Cc_limit/002_Poetry.jpg" class="gallery-image" alt="">
-            </div>
-            
+                <img src="art_sean/Acorn.png" class="gallery-image" alt="">
+            </div>            
         </div>
-        <h1>Title: A...</h1>
-        <h1>Date: 4 September 2023</h1>
+        <h1>Title: Acorn</h1>
+        <h1>Date: 06 September 2023</h1>
         <!--COPY TO HERE-->
 		
 		<!-- End of gallery -->
