Fixed up ' again (Rachelle) index pg

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     <section class="rachelle-words">
         <h1>Rachelle</h1>
-        <p>Well hello there! I’m Rachelle and I really like performing and music (most of my degree at the moment). I love songwriting/composing but struggle with being overly 
+        <p>Well hello there! I'm Rachelle and I really like performing and music (most of my degree at the moment). I love songwriting/composing but struggle with being overly 
             critical and never letting 
             myself finish any pieces. Hopefully doing a whole lot of it over the coming weeks will help me change that :)
         </p>
