Adding Jarrod and mine for A

--- a/Jarrod.html
+++ b/Jarrod.html
@@ -42,9 +42,24 @@
     <section class="artwork_digital_art">        
         <div class="row">
             <div class="photos-col">
-                <img src="art_jarrod/Secrets Inbound.png">
-                <h2>Title: A...</h2>
-                <h2>Date: 4 September 2023</h2>
+                <img src="art_jarrod/antelope.png">
+                <h2>Title: Antelope: Eland</h2>
+                <h2>Date: 7 September 2023</h2>
+                <p>
+                    A living human's body and a dead eland's head. 
+                    Life and death, bio-alchemically transmuted into one entity. 
+                    The eland is a symbol of grace, speed, and power. 
+                    Upon its forehead is the silhouette of the winged thunderbolt, 
+                    symbolic of both speed and power. 
+                    The human body has a green and gold tint to it, 
+                    implying both sickness and vitality. 
+                    The background is a sickly green, another nod towards death, 
+                    while simultaneously green being the colour of life and growth. 
+                    In future I hope to add more symbolism into these pieces, 
+                    and initially sketched out the idea of a living eagle having its wings 
+                    pierced by the eland's horns, but decided against it to stick to my deadline.
+
+                </p>
             </div>
 
             <div class="photos-col">
