--- a/Juliet.html
+++ b/Juliet.html
@@ -43,19 +43,19 @@
     <section class="word_btn_rep">
         <div class="row">
             <div class="word_btn_rep-col">
-                <h1>A...</h1>
-                <p>Coming in the week of 4 September 2023!</p>
-                <a href="book.html" target="_blank" class="hero-btn">Read</a>
+                <h1>Alabaster</h1>
+                <p>8 September 2023</p>
+                <a href="art_juliet/alabaster.html" target="_blank" class="hero-btn">Read</a>
             </div>
             <div class="word_btn_rep-col">
                 <h1>B...</h1>
                 <p>Coming in the week of 11 September 2023!</p>
-                <a href="book.html" target="_blank" class="hero-btn">Read</a>
+                <!--<a href="" target="_blank" class="hero-btn">Read</a>-->
             </div>
             <div class="word_btn_rep-col">
                 <h1>C...</h1>
                 <p>Coming in the week of 18 September 2023!</p>
-                <a href="book.html" target="_blank" class="hero-btn">Read</a>
+                <!--<a href="" target="_blank" class="hero-btn">Read</a>-->
             </div>
 
         </div>
