--- a/art_juliet/alabaster.html
+++ b/art_juliet/alabaster.html
@@ -22,22 +22,25 @@
                 <div class="chapter">
                     
                     <p>
-                        The silence pierced her ears like a pin, slowly making its way throughout her body. Her back arched as she sat on the floor looking forward to a large bowl placed perfectly in front of her. Although she had not touched it yet, its cold started to push into her skin, dying a stain of blue freckles on her arms and cheeks. Within the basket laid rough chunks of alabaster which touched the glass sharply. It was time.
-<br><br>
-A ghost of her hand started reaching forward towards the first piece of stone. When it touched her skin, a pulse of ice shot through her arm, her neck, her back. It felt like a warning, but one of sick laughter that accompanied it. Now in her hand, she brought it towards her face, where it touched her cheek. Her skin drew in the stone like the ocean pulling in a boat – a hateful acceptance of a thing that does not belong. 
-<br><br>
-A small knife laid on the marble floor next to her. Its metal hilt reached over a sharp swooping edge. She held it up in front of her face and took a breath – 
+The silence pierced her ears like a pin, slowly making its way through her body. It happened slowly, the creep of the silence. Every songbird migrated and each waterdrop froze up. There were no more shaking leaves as she sat on the concrete floor: her back arched with her hazel eyes looking forward to a large glass bowl placed perfectly in front of her. Although she had not touched it yet, its cold started to push into her earthy skin, staining it with icy blue freckles. It felt as if the alabaster within was pushing its way towards her, and its edges were going to crack the glass. It was time.
+<br>
+<br>
+She watched her hand as it was carried towards the first piece of stone. Her finger lowered onto it, and a pulse of ice shot through her arm, her neck, her back. She could feel the last of the worms flee from her as she brought it towards her cheek. When it was caught in the underswell, her skin drew in the stone as the ocean pulling in a boat – a hateful acceptance of a thing that does not belong. Over and over did the current swallow and freeze, leaving her with a face of swollen marble. 
+<br>
+<br>
+A small knife laid on the tombed floor next to her. Her hand tightened over its white hilt and brought the sharpened edge to her finger. The pain was quiet. Her white hand brought the bloodied tool in line with her face, and she took a breath – 
 <br><br>
 Red. 
 <br><br>
-A piece of stone dropped to the floor after being hacked off her cheek. In its place, a jagged and bloodied curve that created a hollow from the side of her ear to the tip of her mouth. Again. 
+The silence swallowed the sound of the stone hitting the floor. A jagged and bloodied curve created a hollow from the side of her ear to the tip of her mouth. Again. 
 <br><br>
 Again.
 <br><br>
 <br><br>
 Again.
 <br><br>
-The glass bowl reflected a face she had not seen before. Her eyes were small and drawn; her cheeks had dark troughs that felt divorced from her new, sharp cheekbones. Still dyed red from her blood, the alabaster took hold, and her new form was created.
+The glass bowl reflected a face she had not seen before. Her eyes were the blue of a blizzard and now drawn; her cheeks had dark troughs that seemed in tension with her new, sharp cheekbones. Still dyed red from her blood, the alabaster took hold, and her new form was created.
+
 
 
 
