--- a/Dewald.html
+++ b/Dewald.html
@@ -43,9 +43,10 @@
     <section class="artwork_digital_art">        
         <div class="row">
             <div class="photos-col">
-                <img src="art_dewald/Coming_Soon_Dewald.png">
+                <img src="art_dewald/Week A - Arbalest Lens.png">
                 <div class="layer">
-                    <h3>A...<br>4 Sept 2023</h3>
+                    <h3>Arbalest Lens<br>10 September 2023</h3>
+                    
                 </div>
             </div>
 
@@ -73,7 +74,7 @@
         <h3>MEDIUM: Digital Art.</h3>
         <h3>STYLE: Mysterious old book.</h3>
         <h3>OUTPUT: A5 page (600 ppi).</h3>
-        <h3>POSTING: Sundays 10:00 - here and on my Discord server.</h3>
+        <h3>POSTING: Sundays 12:00PM (Noon) - here and on my Discord server.</h3>
 
     </section>
 
