--- a/Jarrod.html
+++ b/Jarrod.html
@@ -43,7 +43,7 @@
         <div class="row">
             <div class="photos-col">
                 <img src="art_jarrod/antelope.png">
-                <h2>Title: Antelope: Eland</h2>
+                <h2>Title: Agile Antelope</h2>
                 <h2>Date: 7 September 2023</h2>
                 <p>
                     A living human's body and a dead eland's head. 
@@ -63,9 +63,15 @@
             </div>
 
             <div class="photos-col">
-                <img src="art_jarrod/Work in Progress.png">
-                <h2>Title: B...</h2>
-                <h2>Date: 11 September 2023</h2>
+                <img src="art_jarrod/Battleworn (Teddy) Bear.png">
+                <h2>Title: Battleworn (Teddy) Bear</h2>
+                <h2>Date: 10 September 2023</h2>
+                <p>
+                    A bear with a clipped ear, scarred over from old conflict. The bear's snout has been cut off, showing the laughing human skull, 
+                    hiding beneath the surface. Upon the human skull the constellation Ursa Major has been tattooed. 
+                    Above the bear is a crescent moon, indicative of the lunar qualities of bears. 
+
+                </p>
             </div>
 
             <div class="photos-col">
