Rachelle and Sean Week B

--- a/Sean.html
+++ b/Sean.html
@@ -45,14 +45,26 @@
         <!--COPY FROM HERE-->
         <div class="row">
             <div class="two_image">
+                <img src="art_sean/2023-09-13_Branching.png" class="gallery-image" alt="">
+            </div>            
+        </div>
+        <h1>Title: Branching</h1>
+        <h1>Date: 13 September 2023</h1>
+        <!--COPY TO HERE-->
+		
+		<!-- End of gallery -->
+
+        <!--COPY FROM HERE-->
+        <div class="row">
+            <div class="two_image">
                 <img src="art_sean/Acorn.png" class="gallery-image" alt="">
             </div>            
         </div>
         <h1>Title: Acorn</h1>
         <h1>Date: 06 September 2023</h1>
         <!--COPY TO HERE-->
-		
-		<!-- End of gallery -->
+
+        
 
 	</div>
 
