--- a/Rachelle.html
+++ b/Rachelle.html
@@ -50,9 +50,11 @@
                 <audio src="art_rachelle/Anchor.mp3" controls></audio>
             </div>
             <div class="word_btn_rep-col">
-                <h1>B...</h1>
-                <p>Coming in the week of 11 September 2023!</p>
-                <audio src="./test.mp3" controls></audio>
+                <h1>Bermuda</h1>
+                <p>"I remember what my mama said..."
+                    <br>
+                    13 September 2023</p>
+                <audio src="art_rachelle/Bermuda.mp3" controls></audio>
             </div>
             <div class="word_btn_rep-col">
                 <h1>C...</h1>
