Jarrod C and Juliet B

--- a/Jarrod.html
+++ b/Jarrod.html
@@ -75,9 +75,12 @@
             </div>
 
             <div class="photos-col">
-                <img src="art_jarrod/Be Patient.png">
-                <h2>Title: C...</h2>
-                <h2>Date: 18 September 2023</h2>
+                <img src="art_jarrod/C.png">
+                <h2>Title: Crowned Caribou</h2>
+                <h2>Date: 15 September 2023</h2>
+                <p>
+                    Bloodied hands reaching towards the sky, in reverence of the sun and warmth which has returned now in spring. A naked female body covered in the same blood stands proudly, beckoning one to challenge her newly perfected form. The antlers of the caribou head are shedding their velvet lining, indicative of the new life which emerges in spring. The same velvet can be seen as the fabric draped from the figure's arms. The Sun in seen behind the figure, enhancing her sense of nobility.
+                </p>
             </div>
 
 
