--- a/Juliet.html
+++ b/Juliet.html
@@ -48,9 +48,9 @@
                 <a href="art_juliet/alabaster.html" target="_blank" class="hero-btn">Read</a>
             </div>
             <div class="word_btn_rep-col">
-                <h1>B...</h1>
-                <p>Coming in the week of 11 September 2023!</p>
-                <!--<a href="" target="_blank" class="hero-btn">Read</a>-->
+                <h1>Brawl</h1>
+                <p>17 September 2023</p>
+                <a href="art_juliet/brawl.html" target="_blank" class="hero-btn">Read</a>
             </div>
             <div class="word_btn_rep-col">
                 <h1>C...</h1>
