--- a/Jarrod.html
+++ b/Jarrod.html
@@ -82,6 +82,30 @@
                     Bloodied hands reaching towards the sky, in reverence of the sun and warmth which has returned now in spring. A naked female body covered in the same blood stands proudly, beckoning one to challenge her newly perfected form. The antlers of the caribou head are shedding their velvet lining, indicative of the new life which emerges in spring. The same velvet can be seen as the fabric draped from the figure's arms. The Sun in seen behind the figure, enhancing her sense of nobility.
                 </p>
             </div>
+        </div>
+    </section>
+    <!--COPY UNTIL HERE-->
+
+    <!--COPY FROM HERE-->
+    <section class="artwork_digital_art">        
+        <div class="row">
+            <div class="photos-col">
+                <img src="art_jarrod/Secrets Inbound.png">
+                <h2>Title: A...</h2>
+                <h2>Date: 4 September 2023</h2>
+            </div>
+
+            <div class="photos-col">
+                <img src="art_jarrod/Work in Progress.png">
+                <h2>Title: B...</h2>
+                <h2>Date: 11 September 2023</h2>
+            </div>
+
+            <div class="photos-col">
+                <img src="art_jarrod/Be Patient.png">
+                <h2>Title: C...</h2>
+                <h2>Date: 18 September 2023</h2>
+            </div>
 
 
         </div>
