--- a/Sean.html
+++ b/Sean.html
@@ -41,7 +41,16 @@
     </section>
 
     <div class="instagram_layout">
-
+        <!--COPY FROM HERE-->
+        <div class="row">
+            <div class="two_image">
+                <img src="art_sean/Chrysalis_page-0001.jpg" class="gallery-image" alt="">
+            </div>            
+        </div>
+        <h1>Title: Chrysalis</h1>
+        <h1>Date: 21 September 2023</h1>
+        <!--COPY TO HERE-->
+        
         <!--COPY FROM HERE-->
         <div class="row">
             <div class="two_image">
@@ -64,7 +73,9 @@
         <h1>Date: 06 September 2023</h1>
         <!--COPY TO HERE-->
 
-        
+
+
+
 
 	</div>
 
